# recipeTracker

./: .env.example  .gitignore  .prettierignore  Claude.md  PLAN.md  README.md  feedback.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/api/: next.config.ts  package.json  tsconfig.json
apps/api/src/: middleware.ts
apps/api/src/app/: page.tsx
apps/api/src/lib/: db.ts  redis.ts
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts
apps/mcp-server/src/tools/: index.ts
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/src/app/: _layout.tsx  cart.tsx
apps/mobile/src/components/: CartItemRow.tsx  FloatingActionButton.tsx  ImportForm.tsx  RecipeForm.tsx  RecipeListItem.tsx
apps/mobile/src/hooks/: use-recipes.ts
apps/mobile/src/lib/: api.ts
apps/mobile/src/stores/: cart-store.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: use-ingredient-densities.ts  use-job-polling.ts  use-recipes.ts
apps/web/src/lib/: api.ts  unit-conversion.ts
apps/web/src/stores/: cart-store.ts  (+2 more)
infra/docker/: .env.example  docker-compose.yml
services/domain-worker/: package.json
services/domain-worker/src/: index.ts
services/ingestion-worker/: Dockerfile  package.json  pyproject.toml
services/ingestion-worker/src/ingestion_worker/: __init__.py  db.py  llm.py  main.py  models.py  worker.py
services/ingestion-worker/src/ingestion_worker/processors/: __init__.py  instagram.py  jsonld.py  ocr.py  recipe_extractor.py  video_transcript.py
(+56 files in other folders)
