[project]
name = "ingestion-worker"
version = "0.0.1"
description = "Recipe ingestion worker for OCR and video parsing"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "youtube-transcript-api>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
